--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
     "jquery": "^2.1.1",
+    "ng-infinite-scroll": "^1.0.0",
     "underscore": "^1.6.0"
   },
   "browser": {
